syntax = "proto3";

option go_package = "./;generated";

package api;

service AppService {
    rpc ResetBucket(EmptyRequest) returns (ServerResponse) {}
    rpc AddToWhitelist(SubnetRequest) returns (ServerResponse) {}
    rpc AddToBlacklist(SubnetRequest) returns (ServerResponse) {}
    rpc RemoveFromWhitelist(SubnetRequest) returns (ServerResponse) {}
    rpc RemoveFromBlacklist(SubnetRequest) returns (ServerResponse) {}
}

message SubnetRequest {
	string subnet = 1;
}

message EmptyRequest {
}

message ServerResponse {
	string data = 1;
}
